2017-03-08  Markus Gans  <guru.mail@muenster.de>
	* Improve input cursor positioning in FScrollView

2017-02-24  Markus Gans  <guru.mail@muenster.de>
	* Corrected swapped top and left offset variables 
	  in the class FVTerm

2017-02-24  Markus Gans  <guru.mail@muenster.de>
	* FListBox gets the option to save a data pointer for 
	  every FListBoxItem element
	* Fixes incorrect return value of FString::toString()

2017-02-19  Markus Gans  <guru.mail@muenster.de>
	* New FWidget methods setMinimumWidth(), setMinimumHeight(), 
	  setMaximumWidth() and setMaximumHeight() 
	* FButtonGroup now inherits from FScrollView. This supports 
	  many buttons to be displayed in a smaller frame.

2017-02-18  Markus Gans  <guru.mail@muenster.de>
	* Allows a window to have more than one FScrollView widget

2017-02-07  Markus Gans  <guru.mail@muenster.de>
	* Uses termcap capability U8 to identify terminals that 
	  can't display vt100 line-drawing in UTF-8 mode

2017-01-28  Markus Gans  <guru.mail@muenster.de>
	* Allow to change the focus out from FScrollView to another widget

2017-01-26  Markus Gans  <guru.mail@muenster.de>
	* FScrollView now scrolls automatically to the focused widget

2017-01-22  Markus Gans  <guru.mail@muenster.de>
	* A FScrollView object can now have client widgets 
	  on the scrolling area

2017-01-15  Markus Gans  <guru.mail@muenster.de>
	* Virtual window gets a preprocessing handler. This allows 
	  a preprocessing method to be called before the vterm is updated.

2017-01-07  Markus Gans  <guru.mail@muenster.de>
	* Add scrollTo and scrollBy methods to FScrollView

2017-01-03  Markus Gans  <guru.mail@muenster.de>
	* FScrollView now has on-demand scroll bars
	* Arrow keys support for FScrollView viewport scrolling

2017-01-02  Markus Gans  <guru.mail@muenster.de>
	* The new FScrollView widget provides a scrollable viewport 
	  to change the area of interest
	* The scrollview example illustrates the use of FScrollView class
