@@ -1,3 +1,12 @@
+2017-03-12  Markus Gans  <guru.mail@muenster.de>
+	* The FButtonGroup now has a scrolling area 
+	  with on-demand scroll bars
+	* Add the "choice" example to demonstrate the FButtonGroup 
+	  auto-adjusting with on-demand scroll bars
+	* FRect can now combine two FRect objects
+	* The FButtonGroup got the possibility of index access 
+	  to a child button.
+
 2017-03-08  Markus Gans  <guru.mail@muenster.de>
 	* Improve input cursor positioning in FScrollView
 
